tests/NormalTests/paczka2/big_fuzzy/95829526.err
Error in line 3: vkTTlCpWB8 A354 41,8
Error in line 4: ZPb13rdphdh A354 29,6
Error in line 8: vkTTlCpWB8 A40 10,7
Error in line 28: A390 A40 58,7
Error in line 25: qK05ERjYOT A354 7,2
Error in line 32: qK05ERjYOT A390 96,3
Error in line 39: qK05ERjYOT A40 F58,7
Error in line 43: A390 S709 87,6
Error in line 50: ZPb13rdphdh A390 90,0
Error in line 45: 7Az A354 8,2
Error in line 66: ZPb13rdphdh A40 58,8
Error in line 68: ZPb13rdphdh A390 2,2
Error in line 77: qK05ERjYOT A40 51,0
Error in line 78: qK05ERjYOT A354 41,0
Error in line 84: ZPb13rdphdh A390 2,0
Error in line 93: G7j8w A354 2,1
Error in line 90: A390 A354 97,7
Error in line 88: qK05ERjYOT A390 157,0
Error in line 100: qK05ERjYOT A40 56,3
Error in line 106: ZPb13rdphdh A390 40,3
Error in line 107: ZPb13rdphdh A354 78,1
Error in line 89: FalDgQxpZl S709 53,2
Error in line 105: qK05ERjYOT A390 44,9
Error in line 128: vkTTlCpWB8 A40 213,9
Error in line 129: vkTTlCpWB8 A390 58,2
Error in line 140: qK05ERjYOT A40 40,0
Error in line 143: qK05ERjYOT A354 61,1
Error in line 132: ZPb13rdphdh A390 8,3
Error in line 161: A3S0 S70S 14,3
Error in line 177: FalDgQxpZl S709 98,74
Error in line 166: A390 S709 40,3
Error in line 180: A390 A390 95,6
Error in line 179: FalDgQxpZl S709 383,8
Error in line 141: vkTTlCpWB8 A390 392,6
Error in line 183: FalDgQxpZl A354 73,4
Error in line 188: A390 A40 57,6
Error in line 198: G7j8w A390 198,8
Error in line 195: A390 S709 46,1
Error in line 186: ZPb13rdphdh S709 37,6
Error in line 205: A390 A40 17,8
Error in line 218: qK05ERjYOT A354 -1,9
Error in line 219: A390 S709 -1,3
Error in line 228: A390 A40 25,9
Error in line 234: G7j8w A4M 1M,M
